# bulk_rename

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: renamer.py
src/bulk_rename/: __init__.py  __main__.py  cli.py
tests/: 1.py  test_cli.py  test_renamer.py
