[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bulk-rename"
version = "0.1.0"
description = "Bulk rename files based on a pattern"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "signalsenryu", email = "signalsenryu@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
bulk-rename = "bulk_rename.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
