[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bulk-rename-signalsenryu"
version = "0.1.1"
description = "Bulk rename files based on a pattern"
readme = "README.md"
requires-python = ">=3.12"

authors = [{ name = "signalsenryu", email = "signalsenryu@gmail.com" }]

license = "MIT"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=7.0.0", "ruff>=0.15.0"]

[project.scripts]
bulk-rename = "bulk_rename.cli:main"

[project.urls]
Repository = "https://github.com/signalsenryu/bulk-rename"
PyPI = "https://pypi.org/project/bulk-rename-signalsenryu"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
]

[tool.pytest.ini_options]
pythonpath = ["src"]
